tests/NormalTests/paczka1/small_fuzzy/90372129.err
Error in line 15: 3pdnasjJZum A104 11,75
